--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ and
     <section id="news">
       <h2>News</h2>
       <ul>
+<li>Dec 24: Fix issue with the Visualizer. 
 <li>Dec 22: <a href="final.html">Final Round Rules</a> (Dec 22 edition) are now available. 
 <li>Dec 2: <a href="https://arena.ai-comp.net/">Registration for online preliminary round</a> is now available. Register now!
 <li>Nov 25: Game Management System and Visualizer have been updated. See <a href="software.html">Software</a>.
