--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ and
     <section id="news">
       <h2>News</h2>
       <ul>
+<li>Feb 5: We found that some AI programs which are uploaded during server troubles were broken. We cannot repair them. Please re-upload your AI program. Sorry for the inconvenience.
 <li>Feb 5: Another trouble seems to occur and we are now investigating it.
 <li>Feb 5: We have fixed the server troubles. We updated the <a href="HardwareInfo.html">hardware environment</a> and <a href="SoftwareInfo.html">software environment</a> due to the troubles. Please check them.
 <li>Feb 5: We are still dealing with the server troubles. It seems to take a long time because it is difficult to restore the existing data.
