--- a/index-jp.html
+++ b/index-jp.html
@@ -106,9 +106,10 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+<li>2月7日: サーバー障害の発生を防ぐ目的で<a href="software-jp.html">ゲームの実行管理システム</a>を更新しました。
 <li>2月5日: 障害発生の期間中にアップロードされたAIプログラムが破損していることが判明しました。破損したAIプログラムの復旧は不可能であるため、大変お手数をお返しますが最新版を再投稿ください。また、環境の更新に伴い不具合が生じる可能性があるため、お気づきの点がございましたら、ご連絡ください。
-<li>2月5日: サーバ移転に伴う問題が生じているようで、現在、原因を究明中です。
-<li>2月5日: サーバの移転作業が完了しました。移転に伴い、<a href="HardwareInfo.html">ハードウェア環境</a>および<a href="SoftwareInfo.html">ソフトウェア環境</a>が変更になりましたので、ご確認ください。
+<li>2月5日: サーバー移転に伴う問題が生じているようで、現在、原因を究明中です。
+<li>2月5日: サーバーの移転作業が完了しました。移転に伴い、<a href="HardwareInfo.html">ハードウェア環境</a>および<a href="SoftwareInfo.html">ソフトウェア環境</a>が変更になりましたので、ご確認ください。
 <li>2月5日: 現在、サーバーの移転作業に取り組んでいますが、過去のデータの復旧に時間がかかっており、再開の目処は今のところ立っていません。
 <li>2月4日: 対戦頻度を上げたことが原因で、コンテストサーバーに障害が発生しました。現在、サーバーの移転作業に取り組んでいますが、今のところ復旧の目処は立っていません。
 <li>2月1日: コンテストサーバーは現在不安定な状態が続いています。委員会として本問題の解決に取り組んでいるところです。
